--- a/res/rapport.ltx
+++ b/res/rapport.ltx
@@ -483,7 +483,8 @@ cruciales pour comprendre l'algorithme \texttt{CSA de base (arrivée la plus
 	      $bestKnown_{tArr}(pArr) < c_{tArr}$. $c$ ne peut donc pas permettre
 	      d'améliorer \texttt{bestKnown}.
 
-	      Étant donné que nous scannons les connections par ordre croissant, ces inégalité reste vraie pour toutes les connections après $c$.
+          Étant donné que nous scannons les connections par ordre croissant,
+          ces inégalité reste vraie pour toutes les connections après $c$.
 
 	      Puisque notre algorithme supporte plusieurs arrêts d'arrivée avec le
 	      même nom, et doit choisir celui auquel nous parvenons le plus
@@ -491,13 +492,6 @@ cruciales pour comprendre l'algorithme \texttt{CSA de base (arrivée la plus
 	      le nom correspond au nom de la destination finale. Dès que cette
 	      inégalité n'est plus vraie, nous pouvons arrêter le scan des
 	      connections.
-
-	\item \textbf{Recherche du meilleur arrêt d'arrivée}~: Puisque plusieurs
-	      arrêts peuvent co-exister avec le même nom et que notre algorithme
-	      prend en entrée un \textit{nom d'arrêt} de départ et d'arrivée et non
-	      des identifiants d'arrêts uniques, nous cherchons l'identifiant unique
-	      de l'arrêt d'arrivée auquel nous parvenons le plus rapidement, et ce
-	      via une simple recherche linéaire.
 
       \item \textbf{Reconstruction}~: \label{item:reconstruction} Une fois $pArr$ le
           meilleur arrêt d'arrivée trouvé, nous reconstruisons, à partir de
