--- a/res/rapport.ltx
+++ b/res/rapport.ltx
@@ -78,7 +78,7 @@ nous expliquons les notions générales associées aux problèmes de plus court
 chemin dans le contexte des transports en commun. Dans un deuxième temps, nous
 détaillons le fonctionnement et notre implémentation du CSA de base qui
 optimise seulement le temps d'arrivée (\textit{earliest arrival CSA}). Dans un
-troisième temps, nous présentons une version fortement insipirée du
+troisième temps, nous présentons une version fortement inspirée du
 \textit{Pareto Connection Scan profile algorithm}. Ce dernier peut prendre en
 considération d'autres critères, en plus du temps d'arrivée, et optimise
 ceux-ci au sens Pareto.
