--- a/res/refs.bib
+++ b/res/refs.bib
@@ -9,13 +9,13 @@ Julian Dibbelt, Thomas Pajor, Ben Strasser, and Dorothea Wagner
 https://i11www.iti.kit.edu/extra/publications/dpsw-isftr-13.pdf
 
 @misc{ConnectionScanAlgorithmShort,
-    author = {Julian Dibbelt and Thomas Pajor and Ben Strasser and Dorothea
-              Wagner},
+    author = {Julian Dibbelt and Thomas Pajor and Ben Strasser and Dorothea Wagner},
     title = {Intriguingly Simple and Fast Transit Routing},
     howpublished = {\url{
                     https://i11www.iti.kit.edu/extra/publications/dpsw-isftr-13.pdf
                     }},
-},
+    year = {2013},
+}
 
 
 
@@ -46,7 +46,10 @@ Ben Strasser Dorothea Wagner
 https://dl.acm.org/doi/10.5555/2790174.2790186
 
 @misc{ConnectionScanAccelerated,
+    author = {Ben Strasser and Dorothea Wagner},
     title = {Connection Scan Accelerated},
+    year = {2014},
+    note = {Workshop on Algorithm Engineering and Experiments (ALENEX), SIAM},
     howpublished = {\url{https://dl.acm.org/doi/pdf/10.5555/2790174.2790186}},
 }
 
@@ -92,9 +95,9 @@ https://iopscience.iop.org/article/10.1088/1742-6596/1500/1/012104/pdf
     year = {2019},
 }
 
-@online{javaListSort,
-    author = {{Oracle Corporation}},
-    title = {{List.sort(Comparator)}},
+@misc{javaListSort,
+    author = {Oracle Corporation},
+    title = {List.sort(Comparator)},
     url = {
            https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/util/List.html#sort(java.util.Comparator)
            },
@@ -105,7 +108,7 @@ https://iopscience.iop.org/article/10.1088/1742-6596/1500/1/012104/pdf
 
 
 @misc{timSortComplexity,
-    author = {Nicolas Auger, Vincent Jugé, Cyril Nicaud, and Carine Pivoteau},
+    author = {Nicolas Auger and Vincent Jugé and Cyril Nicaud and Carine Pivoteau},
     title = {On the Worst-Case Complexity of TimSort},
     howpublished = {\url{ https://arxiv.org/pdf/1805.08612 }},
     year = {2019},
