--- a/res/rapport.ltx
+++ b/res/rapport.ltx
@@ -1235,6 +1235,19 @@ bornes pour les différentes fonctions.
 
 \end{itemize}
 
+Ces mauvaises complexités temporelles nous obligent à réduire le set de données
+de test à un seul opérateur pour que l'algorithme se termine en un temps
+raisonnable.
+
+\section{Conclusion}
+
+En conclusion, notre implémentation du CSA de base se distingue par sa
+simplicité, car elle ne nécessite pas de file de priorité comme Dijkstra.
+Cependant, la nécessité de la fermeture transitive du graphe des chemins
+constitue une limitation importante. Notre version multi-critère offre une
+grande flexibilité grâce à l’optimisation de Pareto (plusieurs voyages
+proposés), mais cela se traduit par un temps d'exécution nettement plus élevé.
+
 
 \bibliographystyle{plain}
 \bibliography{refs}
